@@ -1,3 +1,10 @@
+2007-08-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-10-03
+	* migrate streams
+	* make Configuration.insert* more robust against invalid template
+	names
+
 2007-08-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-10-02
